<resources>
    <string name="app_name">FoodKonnect</string>
    <string name="splash_tagline">Local Kitchens. Real Food. Delivered.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>

    <string name="role_selection_heading">Let\'s get you started</string>
    <string name="role_selection_subheading">Are you looking to order food, or share your kitchen with the community?</string>
    <string name="role_buyer_title">I\'m a Buyer</string>
    <string name="role_buyer_description">Discover kitchens and order food</string>
    <string name="role_business_title">I\'m a Business</string>
    <string name="role_business_description">List your menu and grow</string>
    <string name="continue_text">Continue</string>
    <string name="location_pin_description">Selected location pin</string>

    <string name="create_account">Create Account</string>
    <string name="create_account_subtitle">Join FoodKonnect and get started</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="business_name">Business / Kitchen Name</string>
    <string name="restaurant">Restaurant</string>
    <string name="home_chef">Home Chef</string>
    <string name="avg_prep_time">Average Prep Time (minutes)</string>
    <string name="set_business_location">Set your kitchen location</string>
</resources>